force-app/main/default/objects/Credentials__c/Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Credentials</label>
</CustomObject>