force-app/main/default/objects/Credentials__c/fields/Base_Login__c.field-meta.xml
<CustomField>
    <fullName>Base_Login__c</fullName>
    <label>Base Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>