force-app/main/default/objects/Credentials__c/fields/Base_Password__c.field-meta.xml
<CustomField>
    <fullName>Base_Password__c</fullName>
    <label>Base Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>