force-app/main/default/objects/Credentials__c/fields/NotifyId__c.field-meta.xml
<CustomField>
    <fullName>NotifyId__c</fullName>
    <description>User to be notified.</description>
    <label>NotifyId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>