force-app/main/default/objects/Credentials__c/fields/User_Login__c.field-meta.xml
<CustomField>
    <fullName>User_Login__c</fullName>
    <label>User Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>